# ordered-trie

./: CMakeLists.txt  LICENSE  README.md  common.cmake  exported.cmake  external.cmake  make_tests.sh
include/: ordered_trie.hpp  ordered_trie_serialise.hpp
include/detail/: ordered_trie_builder.hpp  ordered_trie_builtin_serialise.hpp  ordered_trie_impl.hpp  ordered_trie_iterator.hpp  ordered_trie_node.hpp  ordered_trie_store.hpp  ordered_trie_varint.hpp
src/libs/ordered_trie/: CMakeLists.txt  completion.h  completion.inl  detail_concepts.h  detail_concrete_node.h  detail_concrete_node.inl  detail_encoding.h  detail_encoding_impl.inl  detail_iterator.h  detail_iterator.inl  detail_make_ordered_trie.h  detail_make_ordered_trie.inl  detail_payload_types.h  detail_serialise_trie.h  detail_serialise_trie.inl  detail_traversal.h  detail_traversal.inl  detail_trie_impl.h  detail_trie_impl.inl  detail_trie_impl_old.inl  detail_varint.h  ordered_trie.h  ordered_trie.inl  serialise.h  traversal.h  traversal.inl
src/tests/test_integral_encoding/: CMakeLists.txt  test_integral_encoding.cpp
src/tests/test_node_encoding/: CMakeLists.txt  test_node_encoding.cpp  test_node_encoding_utils.h
src/tests/test_ordered_trie/: CMakeLists.txt  test_ordered_trie.cpp
src/tests/test_serialise_trie/: CMakeLists.txt  test_serialise_trie.cpp
tests/: CMakeLists.txt  test_ordered_trie.cpp  test_utils.h
